[gd_scene load_steps=9 format=3 uid="uid://kahd1mq4dp30"]

[ext_resource type="Theme" uid="uid://cjwibc6a6kroj" path="res://resources/themes/main.tres" id="1_u0blt"]
[ext_resource type="Texture2D" uid="uid://f0mnarbh2rnr" path="res://resources/images/bg/BG5.png" id="3_qhri8"]
[ext_resource type="Script" path="res://display_scenes/vocab_A_menu.gd" id="3_rmgsl"]
[ext_resource type="PackedScene" uid="uid://btdusi7m3ilte" path="res://object_scenes/vocab_button.tscn" id="4_dykg8"]
[ext_resource type="Texture2D" uid="uid://cl2bgqcxyan77" path="res://icon.svg" id="5_66ji3"]
[ext_resource type="Texture2D" uid="uid://wr5fx08t25j4" path="res://icon.png" id="7_npbhk"]
[ext_resource type="PackedScene" uid="uid://bthyjx2tbvt7y" path="res://object_scenes/bgm_toggle.tscn" id="8_mglsy"]
[ext_resource type="PackedScene" uid="uid://djyc1djrujk8k" path="res://object_scenes/back_button.tscn" id="8_nih1d"]

[node name="vocab_A_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u0blt")
script = ExtResource("3_rmgsl")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.176471, 0.211765, 1)

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qhri8")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="h_box_container" type="HBoxContainer" parent="margin_container"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="margin_container/h_box_container"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="scroll_container" type="ScrollContainer" parent="margin_container/h_box_container/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
follow_focus = true

[node name="vocab_button_list" type="VBoxContainer" parent="margin_container/h_box_container/MarginContainer/scroll_container"]
layout_mode = 2

[node name="vocab_button" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 1

[node name="vocab_button2" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 2

[node name="vocab_button3" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 3

[node name="vocab_button4" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 4

[node name="vocab_button5" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 5

[node name="vocab_button6" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 6

[node name="vocab_button7" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 7

[node name="vocab_button8" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 8

[node name="vocab_button9" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 9

[node name="vocab_button10" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 10

[node name="vocab_button11" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 11

[node name="vocab_button12" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 12

[node name="vocab_button13" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 13

[node name="vocab_button14" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 14

[node name="vocab_button15" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 15

[node name="vocab_button16" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 16

[node name="vocab_button17" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 17

[node name="vocab_button18" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 18

[node name="vocab_button19" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 19

[node name="vocab_button20" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 20

[node name="vocab_button21" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 21

[node name="vocab_button22" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 22

[node name="vocab_button23" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 23

[node name="vocab_button24" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 24

[node name="vocab_button25" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 25

[node name="vocab_button26" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 26

[node name="vocab_button27" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 27

[node name="vocab_button28" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 28

[node name="vocab_button29" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 29

[node name="vocab_button30" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 30

[node name="vocab_button31" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 31

[node name="vocab_button32" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 32

[node name="vocab_button33" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 33

[node name="vocab_button34" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 34

[node name="vocab_button35" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 35

[node name="vocab_button36" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 36

[node name="vocab_button37" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 37

[node name="vocab_button38" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 38

[node name="vocab_button39" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 39

[node name="vocab_button40" parent="margin_container/h_box_container/MarginContainer/scroll_container/vocab_button_list" instance=ExtResource("4_dykg8")]
layout_mode = 2
target = 40

[node name="vocab_resources" type="Control" parent="margin_container/h_box_container"]
custom_minimum_size = Vector2(800, 630)
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="margin_container/h_box_container/vocab_resources"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_right = 272.0
offset_bottom = 585.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="v_box_container" type="VBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="english_word" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Vocabulary Word"
horizontal_alignment = 1
vertical_alignment = 2

[node name="word_audio" type="Button" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Listen"

[node name="translation" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Translation"
horizontal_alignment = 1
vertical_alignment = 2

[node name="illustration_margin" type="MarginContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="illustration" type="TextureRect" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/illustration_margin"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("5_66ji3")
stretch_mode = 5

[node name="word_input_container" type="VBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container"]
visible = false
layout_mode = 2

[node name="label" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Type the Word to unlock the sentence example 
and the next word!"
horizontal_alignment = 1

[node name="h_box_container" type="HBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container/h_box_container"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="text_input" type="LineEdit" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container/h_box_container/MarginContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
placeholder_text = "Type Here!"

[node name="submit_button" type="Button" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container/h_box_container"]
layout_mode = 2
text = "Submit"

[node name="wrong_warning" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
theme_override_font_sizes/font_size = 20
text = "Oops, that is not the correct word. Type the word above!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="contents_container" type="VBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container"]
layout_mode = 2

[node name="example_label" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.83, 0.912167, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Sentence Example:"
horizontal_alignment = 1

[node name="example" type="Label" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container"]
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Sentence Example will be shown here
And the translation here"
horizontal_alignment = 1

[node name="prev_next_buttons" type="HBoxContainer" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container"]
layout_mode = 2
alignment = 1

[node name="previous" type="Button" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container/prev_next_buttons"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
text = "Previous"

[node name="margin" type="Control" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container/prev_next_buttons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="next" type="Button" parent="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container/prev_next_buttons"]
custom_minimum_size = Vector2(140, 35)
layout_mode = 2
text = "Next"

[node name="back_button" parent="." instance=ExtResource("8_nih1d")]
layout_mode = 0
offset_left = 45.0
offset_top = 40.0
offset_right = 173.0
offset_bottom = 168.0
target_scene = "start_menu"

[node name="unlocker" type="TextureButton" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -65.0
offset_right = -26.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("7_npbhk")
ignore_texture_size = true
stretch_mode = 0

[node name="word_audio" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0

[node name="bgm_toggle" parent="." instance=ExtResource("8_mglsy")]
layout_mode = 1
offset_left = -110.0
offset_top = 40.0
offset_right = -46.0
offset_bottom = 104.0

[node name="sfx_player" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/HBoxContainer/word_audio" to="." method="_on_word_audio_pressed"]
[connection signal="text_submitted" from="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container/h_box_container/MarginContainer/text_input" to="." method="_on_text_input_text_submitted"]
[connection signal="pressed" from="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/word_input_container/h_box_container/submit_button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container/prev_next_buttons/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="margin_container/h_box_container/vocab_resources/margin_container/v_box_container/contents_container/prev_next_buttons/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="unlocker" to="." method="_on_unlocker_pressed"]
